fix: preserve canonical dump data and bound full imports (#48)
* fix: preserve release format quantity variants

* fix: preserve colliding release relations

* fix: reuse completed dependency checkpoints

* perf: bound release master locking

* perf: batch master backlink mutations

* perf: skip stale deletes for new roots

* perf: skip completed chunks before transformation

* perf: bucket canonical relation writes

* perf: prepare relation chunks once

* perf: share timestamps across core chunks

* test: separate job verification lanes

* test: split gradle verification lanes

* perf: use typed canonical relation keys

* perf: suspend transactions during chunk preparation

* perf: bound transient lock retries

* fix: canonicalize semantic relation identities

* perf: reconcile release backlinks after chunks

* test: verify canonical release identity vectors

* feat: persist canonical relation ordinals

* perf: stop writing relation creation timestamps

* perf: reuse Java relation bind plans

* test: prove unchanged roots skip PostgreSQL updates

* test: verify changed dump convergence

* test: cover every entity selection plan

* test: verify standalone entity imports

* fix: resume compatible Go import progress

* test: resume Go-owned import chunks in Java

* docs: record test lane efficiency

* feat: track durable catalog readiness

* test: verify Release resume after process kill

* test: verify resume after PostgreSQL kill

* fix: remove meaningless relation ordinals

* fix: support relation tables without surrogate keys

* perf: defer bootstrap foreign key checks

* fix: preserve colliding non-release relations

* refactor: remove redundant physical relation dedupe

* perf: avoid redundant master backlink writes

* perf: skip fully completed resume sources

* perf: narrow stale master backlink scan

* perf: seed bootstrap master backlinks from dump